{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 96,
  "lineage": "bbe010b3-fb19-03a9-5c31-a0f8fa7c1e8b",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0828596b82405edd7",
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:instance/i-02782d8fa0b3195de",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "DMSLab20230512053700863300000003",
            "id": "i-02782d8fa0b3195de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014ab44189cfda05e",
            "private_dns": "ip-10-0-1-53.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09eb507643d425207",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-096d95465cfd79cca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb0c53c04ac5dc8e",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-BastionInstance",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-BastionInstance",
              "Project": "DMS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096d95465cfd79cca"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.instances.aws_iam_instance_profile.bastion_profile",
            "module.instances.aws_iam_role.ssm_role",
            "module.instances.aws_security_group.bastion",
            "module.instances.data.aws_ssm_parameter.amazon_linux_ami",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "src_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0828596b82405edd7",
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:instance/i-034b550946f95aea5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "DMSLab20230512053700863300000003",
            "id": "i-034b550946f95aea5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f2499407552110e",
            "private_dns": "ip-10-0-0-187.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0315cd0cb7db686d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0332903f2c20fae09"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb0c53c04ac5dc8e",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-SourceDb",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-SourceDb",
              "Project": "DMS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0332903f2c20fae09"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.instances.aws_iam_instance_profile.bastion_profile",
            "module.instances.aws_iam_role.ssm_role",
            "module.instances.aws_security_group.bastion",
            "module.instances.aws_security_group.db",
            "module.instances.aws_security_group.dms",
            "module.instances.data.aws_ssm_parameter.amazon_linux_ami",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:security-group/sg-096d95465cfd79cca",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to anywhere from this bastion",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096d95465cfd79cca",
            "ingress": [],
            "name": "DMS-Lab-Bastion-Sg",
            "name_prefix": "",
            "owner_id": "883779074323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-Bastion-Sg",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-Bastion-Sg",
              "Project": "DMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:security-group/sg-0332903f2c20fae09",
            "description": "Security group for db instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to anywhere from this replication instance.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0332903f2c20fae09",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow from bastion to this db",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096d95465cfd79cca"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow from dms to this db",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f5ecc5666e38101a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DMS-Lab-Db-Sg",
            "name_prefix": "",
            "owner_id": "883779074323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-Db-Sg",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-Db-Sg",
              "Project": "DMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_security_group.bastion",
            "module.instances.aws_security_group.dms",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:security-group/sg-0f5ecc5666e38101a",
            "description": "Security group for replication instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to anywhere from this replication instance.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ecc5666e38101a",
            "ingress": [],
            "name": "DMS-Lab-RepInstance-Sg",
            "name_prefix": "",
            "owner_id": "883779074323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-RepInstance-Sg",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-RepInstance-Sg",
              "Project": "DMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027d0c4699612e959",
            "domain": "vpc",
            "id": "eipalloc-027d0c4699612e959",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-75-67-168.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.67.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-NatIp1",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-NatIp1",
              "Project": "DMS"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:internet-gateway/igw-0688201cf38e09500",
            "id": "igw-0688201cf38e09500",
            "owner_id": "883779074323",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-IGW",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-IGW",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027d0c4699612e959",
            "connectivity_type": "public",
            "id": "nat-01e01a3265eebc70c",
            "network_interface_id": "eni-0c0fbf11d12871163",
            "private_ip": "10.0.7.189",
            "public_ip": "35.75.67.168",
            "subnet_id": "subnet-04f4bac7b4deaf092",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-NatGateway1",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-NatGateway1",
              "Project": "DMS"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:network-acl/acl-03296009497fe11df",
            "egress": [],
            "id": "acl-03296009497fe11df",
            "ingress": [],
            "owner_id": "883779074323",
            "subnet_ids": [
              "subnet-036e63fef1aa30126",
              "subnet-038becd4585413c16",
              "subnet-0fb5e0f94d89b60f0"
            ],
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbNACL",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbNACL",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:network-acl/acl-00987ad20670cf779",
            "egress": [],
            "id": "acl-00987ad20670cf779",
            "ingress": [],
            "owner_id": "883779074323",
            "subnet_ids": [
              "subnet-0beec675ebeb8daf3",
              "subnet-0cb0c53c04ac5dc8e",
              "subnet-0e1e75e5cdc7eee86"
            ],
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateNACL",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateNACL",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:network-acl/acl-07f6c559ce841d063",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07f6c559ce841d063",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "883779074323",
            "subnet_ids": [
              "subnet-0133fb65130cb2fde",
              "subnet-04f4bac7b4deaf092",
              "subnet-079057dc8a745f571",
              "subnet-0a59be880cb41df6d"
            ],
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicNACL",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicNACL",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3347767834",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03296009497fe11df",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.db",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.2.0/23",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2954113258",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03296009497fe11df",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.db",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.4.0/23",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-733052037",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03296009497fe11df",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.db",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1652228124",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03296009497fe11df",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.db",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.2.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4221134365",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03296009497fe11df",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.db",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.4.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-974633437",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03296009497fe11df",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.db",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1585621787",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00987ad20670cf779",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_in_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2576425046",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00987ad20670cf779",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1547670983",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00987ad20670cf779",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:route-table/rtb-0f601896712313f5f",
            "id": "rtb-0f601896712313f5f",
            "owner_id": "883779074323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbRoute",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbRoute",
              "Project": "DMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:route-table/rtb-0e769663955819141",
            "id": "rtb-0e769663955819141",
            "owner_id": "883779074323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e01a3265eebc70c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateRoute1",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateRoute1",
              "Project": "DMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:route-table/rtb-01d9361cbab84f28a",
            "id": "rtb-01d9361cbab84f28a",
            "owner_id": "883779074323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0688201cf38e09500",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicRoute",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicRoute",
              "Project": "DMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a50db42a9280fb2",
            "route_table_id": "rtb-0f601896712313f5f",
            "subnet_id": "subnet-0fb5e0f94d89b60f0"
          },
          "dependencies": [
            "module.network.aws_route_table.db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c60e7f4224651e50",
            "route_table_id": "rtb-0f601896712313f5f",
            "subnet_id": "subnet-036e63fef1aa30126"
          },
          "dependencies": [
            "module.network.aws_route_table.db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf1ac503a5efa84e",
            "route_table_id": "rtb-0f601896712313f5f",
            "subnet_id": "subnet-038becd4585413c16"
          },
          "dependencies": [
            "module.network.aws_route_table.db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f85a5c2bd1f01ac9",
            "route_table_id": "rtb-0e769663955819141",
            "subnet_id": "subnet-0cb0c53c04ac5dc8e"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ebf51f2cc2c0f6",
            "route_table_id": "rtb-0e769663955819141",
            "subnet_id": "subnet-0beec675ebeb8daf3"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0984a0b1a35375053",
            "route_table_id": "rtb-0e769663955819141",
            "subnet_id": "subnet-0e1e75e5cdc7eee86"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c279df9516f46ae",
            "route_table_id": "rtb-01d9361cbab84f28a",
            "subnet_id": "subnet-04f4bac7b4deaf092"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0283ea93317094988",
            "route_table_id": "rtb-01d9361cbab84f28a",
            "subnet_id": "subnet-0a59be880cb41df6d"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03876301ac8a182e1",
            "route_table_id": "rtb-01d9361cbab84f28a",
            "subnet_id": "subnet-0133fb65130cb2fde"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e946f811194fcd6e",
            "route_table_id": "rtb-01d9361cbab84f28a",
            "subnet_id": "subnet-079057dc8a745f571"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-0fb5e0f94d89b60f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.6.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb5e0f94d89b60f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbSubnet1",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbSubnet1",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-036e63fef1aa30126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.6.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036e63fef1aa30126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbSubnet2",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbSubnet2",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-038becd4585413c16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.7.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038becd4585413c16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbSubnet3",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-DbSubnet3",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-0cb0c53c04ac5dc8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb0c53c04ac5dc8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateSubnet1",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateSubnet1",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-0beec675ebeb8daf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beec675ebeb8daf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateSubnet2",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateSubnet2",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-0e1e75e5cdc7eee86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e75e5cdc7eee86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateSubnet3",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PrivateSubnet3",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-04f4bac7b4deaf092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.7.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f4bac7b4deaf092",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet1",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet1",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-0a59be880cb41df6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.8.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a59be880cb41df6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet2",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet2",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-0133fb65130cb2fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.8.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133fb65130cb2fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet3",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet3",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:subnet/subnet-079057dc8a745f571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.9.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079057dc8a745f571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883779074323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet4",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-PublicSubnet4",
              "Project": "DMS"
            },
            "vpc_id": "vpc-05fb6ba89bd37cac4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:883779074323:vpc/vpc-05fb6ba89bd37cac4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0363b48e2b2e5f75f",
            "default_route_table_id": "rtb-02ea4e85fee9cd525",
            "default_security_group_id": "sg-078d5c5d98f460a0e",
            "dhcp_options_id": "dopt-fb18599c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05fb6ba89bd37cac4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ea4e85fee9cd525",
            "owner_id": "883779074323",
            "tags": {
              "Env": "Lab",
              "Name": "DMS-Lab-Vpc",
              "Project": "DMS"
            },
            "tags_all": {
              "Env": "Lab",
              "Name": "DMS-Lab-Vpc",
              "Project": "DMS"
            }
          }
        }
      ]
    }
  ]
}